# libalgebra_tests

./: .gitignore  .gitmodules  Brownian_path_10_10.raw  Brownian_path_5_10.raw  Brownian_path_5_50.raw  CMakeLists.txt  Dockerfile  libalgebra_tests.sln  libalgebra_unittests.h.in  simple-Dockerfile
LibAlgebraUnitTests/: AlgebaFunctionsTests.cpp  CMakeLists.txt  CurrentTestOutput.txt  HallSetTests.cpp  LatticePathTests.cpp  LibAlgebraUnitTests.cpp  LibAlgebraUnitTests.vcxproj  LibAlgebraUnitTests.vcxproj.filters  OMPSigsTests.cpp  SHOW.h  SigHelpers.h  TreeBufferHelper.cpp  TreeBufferHelper.h  alg_framework.h  brown_path_increments.h  categorical_path.h  compat.h  helpers.h  logsignature.raw  makebm.cpp  makebm.h  memfile.cpp  memfile.h  reporter.cpp  reporter.h  signaturetmp.raw  simple_basis.h  small_vector.h  speed_tests.cpp  tests.cpp  tests_TENSOR_LIE_CBH_MAPS.cpp  tests_libalgebra-demo.cpp  time_and_details.h  x64sigs.cpp
LibAlgebraUnitTests/algebra/: CMakeLists.txt  framework_fixture.h  simple_algebra_basis.h  test_algebra_product.cpp
LibAlgebraUnitTests/hall_set/: CMakeLists.txt  run_tests.cpp  test_extension_of_functions.cpp
LibAlgebraUnitTests/lie/: CMakeLists.txt  test_basis.cpp  test_hall_basis.cpp  test_lie_multiplication.cpp
LibAlgebraUnitTests/shuffle_tensor/: run_tests.cpp  test_shuffle_tensor.cpp
LibAlgebraUnitTests/signature_tests/: CMakeLists.txt  accuracy_suite.ins  coefficient_path_suite.ins  double_path_suite.ins  float_path_suite.ins  generic_coefficient.h  generic_lie_increment.h  generic_path.h  test_brownian_path.cpp  test_innovative_path.cpp
LibAlgebraUnitTests/tensor/: CMakeLists.txt  run_tests.cpp  tensor_exp_suite.h  tensor_inverse_suite.h  tensor_log_suite.h  tensor_roundtrip_suite.h  test_basis.cpp  test_dense_tensor_functions.cpp  test_dense_tensor_multiplication.cpp  test_hybrid_tensor_functions.cpp  test_hybrid_tensor_multiplication.cpp  test_signature_calc.cpp  test_sparse_tensor_functions.cpp  test_sparse_tensor_multiplication.cpp  test_tensor.cpp  test_tensor_functions.cpp  test_tensor_multiplication.cpp  test_tensor_size_info.cpp
LibAlgebraUnitTests/utils/: CMakeLists.txt  test_integer_maths.cpp
LibAlgebraUnitTests/vector/: CMakeLists.txt  framework_fixture.h  test_dense.cpp  test_dense_storage.cpp  test_hybrid.cpp  test_sparse.cpp  vector_arithmetic_suite.h  vector_element_access_suite.h  vector_iterator_suite.h  vector_properties_suite.h
libalgebra-demo/: libalgebra-demo.cpp  libalgebra-demo.vcxproj  libalgebra-demo.vcxproj.filters  libalgebra_from_submodule.props
liblagebra-demo-cmake/: CMakeLists.txt  liblagebra-demo-cmake.cpp  liblagebra-demo-cmake.h
