# CMakeList.txt : CMake project for liblagebra-demo-cmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (liblagebra-demo-cmake "liblagebra-demo-cmake.cpp" "liblagebra-demo-cmake.h")

# TODO: Add tests and install targets if needed.
